--- a/style.css
+++ b/style.css
@@ -8,15 +8,120 @@
     height: 60px;
     background-color: #0F1111;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 .navlogo{
     height: 50px;
     width: 100px;
-    background-color: white;
-    background-image: url("images/amazon_logo.png");
 }
 .logo{
     background-image: url("images/amazon_logo.png");
+    background-size: cover;
     height: 50px;
     width: 100%;
 }
+.border{
+    border: 2px solid transparent;
+}
+.border:hover{
+    border: 1.2px solid white;
+}
+/* * Box 2**/
+.address1{
+    color: #cccccc;
+    font-size: 0.7rem;
+    margin-left: 15px;
+}
+.address2{
+    color: #ffffff;
+    font-size: 1rem;
+    margin-left: 3px;
+}
+.add-icon{
+    display: flex;
+    align-items: center;
+}
+
+/* Box 3 */
+.nav-search{
+    display: flex;
+    justify-content: space-evenly;
+    width: 620px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: aqua;
+}
+.search-select{
+    background-color: #f3f3f3;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+}
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+.search-icon{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    background-color: #fedb68;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0F1111;
+}
+.nav-search :hover{
+    border: 2px solid orange;
+}
+
+/* box 4  & 5*/
+
+span{
+    font-size: 0.7rem;
+
+}
+
+.nav-second{
+    font-size: 0.7rem;
+    font-weight: 700;
+}
+
+/* box 6 */
+.nav-cart i{
+    font-size: 35px;
+}
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/* Pnnel Styling */
+.pannel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.pannel-option p{
+    display: inline;
+    margin-left: 15px;
+}
+.pannel-option{
+    width: 70%;
+    font-size: 0.8rem;
+}
+.pannel-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
