--- a/style.css
+++ b/style.css
@@ -124,4 +124,26 @@ span{
     font-size: 0.9rem;
     font-weight: 700;
 }
-
+/* Hero section */
+.hero-section{
+    background-image: url(images/hero_image.jpg);
+    background-size: cover;
+    height: 380px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.hero-msg{
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center ;
+    justify-content: center;
+    font-size: 0.85rem;
+    width: 90%;
+    margin-bottom: 25px;
+}
+.hero-msg a{
+    color: #007785;
+}
