--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@
 .nav-search :hover{
     border: 2px solid orange;
 }
+.nav-search i:hover{
+    border: none;
+}
 
 /* box 4  & 5*/
 
@@ -189,13 +192,13 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 0.5rem;
+    font-size: 1rem;
 }
 
 .foot-pannel2{
     background-color: #222f3d;
     color: white;
-    height: 500px;
+    height: 400px;
     display: flex;
     justify-content: space-evenly;
 }
